--- a/cms/index.html
+++ b/cms/index.html
@@ -12,7 +12,7 @@
     <link href="css/half-slider.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body style="height: 10vh;">
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -50,40 +50,11 @@
       <!-- /.container -->
     </nav>
 
-    <!-- Half Page Image Background Carousel Header -->
-    <header id="myCarousel" class="carousel slide">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-      <!-- Wrapper for Slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <!-- Set the second background image using inline CSS below. -->
-          <div class="fill" style="background-image: url('img/c2.png');"></div>
-          <div class="carousel-caption"></div>
-        </div>
-        <div class="item">
-          <!-- Set the third background image using inline CSS below. -->
-          <div class="fill" style="background-image: url('img/c1.jpg');"></div>
-          <div class="carousel-caption"></div>
-        </div>
-      </div>
-
-      <!-- Controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="icon-prev"></span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="icon-next"></span>
-      </a>
+   
     </header>
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container" style="margin-top:30rem;">
       <div class="row">
         <div class="col-lg-12">
           <h1>Complaint Management System</h1>
@@ -97,8 +68,7 @@
         <div class="row">
           <div class="col-lg-12">
             <p>
-              Copyright &copy;
-              <a href="http://www.phpgurukul.com/">PHPGURUKUL</a> | Complaint
+              Complaint
               Management System 2020
             </p>
           </div>
@@ -114,11 +84,6 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-      $(".carousel").carousel({
-        interval: 5000, //changes the speed
-      });
-    </script>
+
   </body>
 </html>
